service-account-gitea-act-runner.yaml
# Namespace: gitea-runner
apiVersion: v1
kind: Namespace
metadata:
  name: gitea-runner
