gitea-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-runner
  namespace: gitea-runner
  labels:
    app: gitea-runner
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitea-runner
  template:
    metadata:
      labels:
        app: gitea-runner
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: gitea-runner
          image: gitea/act_runner:latest
          securityContext:
            privileged: true
          volumeMounts:
            - name: runner-home
              mountPath: /data
            - name: docker-sock
              mountPath: /var/run/docker.sock
      volumes:
        - name: runner-home
          emptyDir: {}
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: Socket
